--- a/FinnApp.ipynb
+++ b/FinnApp.ipynb
@@ -2,40 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45ac94e112bc4835baf8ab6e32b3d827",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Text(value='2019-05-11', description='Start Date:'), Text(value='2020-05-10', de…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d448aaf4c484693a58ead9442755fa2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border='1px solid black'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Portfolio import Portfolio\n",
     "import warnings\n",
@@ -46,6 +17,16 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "def _set_plt_params():\n",
+    "    plt.rcParams['lines.linewidth'] = 3\n",
+    "    plt.rcParams['lines.markersize'] = 10\n",
+    "    plt.rcParams['font.size'] = 16\n",
+    "    plt.rcParams['figure.figsize'] = (14, 8)\n",
+    "    plt.rcParams['figure.facecolor'] = 'white'\n",
+    "    plt.xticks(fontsize=16)\n",
+    "    plt.yticks(fontsize=16)\n",
+    "    \n",
+    "    \n",
     "vb = widgets.VBox()\n",
     "portfolio = None\n",
     "out = widgets.Output(layout = {\n",
@@ -53,7 +34,7 @@
     "})\n",
     "\n",
     "def simulate_portfolio():\n",
-    "    IPython.display.clear_output(wait=True)\n",
+    "    _set_plt_params()\n",
     "    global portfolio\n",
     "    tickers = []\n",
     "    weights = []\n",
@@ -80,23 +61,28 @@
     "    try: \n",
     "        np.testing.assert_almost_equal(weights, 1)\n",
     "    except:\n",
-    "        print(\"Weights must sum up to 1\")\n",
+    "        with out:\n",
+    "            print(\"Weights must sum up to 1. Now it is\", weights)\n",
     "        return\n",
     "    sd, ed, inv = [w.value for w in vb.children[0].children]\n",
     "    if not datetime.strptime(sd, \"%Y-%m-%d\") < datetime.strptime(ed, \"%Y-%m-%d\"):\n",
-    "        print(\"You must enter a valid date and start date must be earlier than the end date\")\n",
+    "        with out:\n",
+    "            print(\"You must enter a valid date and start date must be earlier than the end date\")\n",
     "        return\n",
     "    if not inv > 0:\n",
-    "        print(\"Investment must be positive\")\n",
+    "        with out:\n",
+    "            print(\"Investment must be positive\")\n",
     "        return\n",
     "    simulate_portfolio()\n",
     "\n",
-    "def add_ticker():\n",
+    "def add_ticker(v1=None, v2=None):\n",
     "    w1 = widgets.Text(\n",
     "        placeholder='URTH',\n",
     "        description='Ticker:',\n",
     "        disabled=False\n",
     "    )\n",
+    "    if v1 is not None:\n",
+    "        w1.value = v1\n",
     "\n",
     "    w2 = widgets.BoundedFloatText(\n",
     "        placeholder=0,\n",
@@ -106,6 +92,8 @@
     "        description='Weight:',\n",
     "        disabled=False\n",
     "    )\n",
+    "    if v2 is not None:\n",
+    "        w2.value = v2\n",
     "    \n",
     "    b_remove = widgets.Button(\n",
     "        value=False,\n",
@@ -150,7 +138,7 @@
     "            disabled=False\n",
     "            )\n",
     "\n",
-    "    return widgets.HBox([w_sd, w_ed, w_inv])\n",
+    "    return widgets.HBox([w_sd, w_ed, w_inv], layout = {'border': '1px solid black'})\n",
     "\n",
     "def buttons_input():\n",
     "    b_add = widgets.Button(\n",
@@ -172,17 +160,10 @@
     "    return widgets.HBox([b_add, b_simulate])\n",
     "\n",
     "\n",
-    "vb.children=tuple(list(vb.children) + [date_inv_input(), add_ticker(), buttons_input()])\n",
+    "vb.children=tuple(list(vb.children) + [date_inv_input(), add_ticker(\"URTH\", 0.75), add_ticker(\"EEM\", 0.25), buttons_input()])\n",
     "display(vb)\n",
     "display(out)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
